# Tenant_api

./: .env  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
alembic/: env.py
app/: .env  main.py
app/api/: deps.py
app/api/v1/: auth.py  tenant.py  user.py
app/core/: config.py  database.py  security.py
app/models/: tenant.py  user.py
app/schemas/: tenant.py  token.py  user.py
scripts/: create_tables.py  e2e_db_test.py  e2e_test.py  fix_schema.py
